# ackermann_car

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
ackermann_car/communication/: network.py
ackermann_car/controllers/: __init__.py  base.py  hybrid_mpc.py  mpc.py
ackermann_car/sim/: car.py  lap_manager.py  obstacles.py  speed_profile.py  track.py  visualizer.py
controllers/: MPC_FORMULATION.md  __init__.py  base_controller.py  mpc_controller.py
docs/: INTERFACE.md  MPC_FORMULATION.md
scripts/: render_demos.py  run.py  tune_smoothness.py
sim/: lap_manager.py  speed_profile.py  track.py  visualizer.py
tests/: test_comms.py  test_dynamics.py  test_obstacle_generator.py  test_obstacles.py
