[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ackermann_car"
version = "0.1.0"
description = "MPC path-tracking controller for an Ackermann-steering car on a racetrack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "cvxpy>=1.2",
    "osqp>=0.6",
    "pyzmq>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
